...
        android:textColor="@color/text_body"
        android:textSize="@dimen/text_medium"
        app:layout_constraintStart_toStartOf="@+id/edtPassword"
        app:layout_constraintTop_toBottomOf="@+id/tvPasswordErrorMessage" />

    <TextView
        android:id="@+id/btnSignIn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.05"
        android:fontFamily="@font/montserrat_semi_bold"
        android:gravity="center"
...
